# career-pilot

./: .gitignore  README.md  config.py  cover_letter.py  dashboard.py  docx_export.py  jd_tailorer.py  keyword_gap.py  main.py  package.json  pyproject.toml  requirements.txt  resume_builder.py  resume_data.example.py  salary_lookup.py  version_tracker.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
apply/: __init__.py  base.py  finder.py  linkedin.py  naukri.py  run.py  safety.py
data/: answers.example.json
jobs/: __init__.py  cover_letter.py  keyword_gap.py  matcher.py
research/: __init__.py  connection_finder.py
resume/: __init__.py  analyzer.py  tailorer.py
tests/: __init__.py  conftest.py  test_config.py  test_cover_letter.py  test_dashboard.py  test_edge_cases.py  test_features.py  test_jd_tailorer.py  test_keyword_gap.py  test_resume_analyzer.py  test_safety.py
tracking/: __init__.py  version_tracker.py
